とりあえず動く版(regexp不安定)

--- a/css/codehighlight.less
+++ b/css/codehighlight.less
@@ -80,9 +80,11 @@ pre.code.highlight {
 
 	.comment {
 		color:@comment-color;
+		font-weight: normal;
 		* {
 			// comment内のliteralやkeywordは無視
 			color:@comment-color;
+			font-weight: normal;
 		}
 	}
 
