リファクタリング

--- a/css/codehighlight.less
+++ b/css/codehighlight.less
@@ -99,9 +99,9 @@
 			border-right:3px solid @title-bg;
 			div {
 				padding:0 0.4em;
-				&:after {
-					content: ":";
-				}
+				// &:after {
+				// 	content: ":";
+				// }
 			}
 		}
 
