--- a/css/codehighlight.less
+++ b/css/codehighlight.less
@@ -45,6 +45,16 @@
 		margin:0;
 	}
 
+	span.color-block {
+		display:inline-block;
+		border:1px solid black;
+		margin-left:0.2em;
+		width:1em;
+		height:1em;
+		padding:0;
+		vertical-align: middle;
+	}
+
 	.title {
 		background:@title-bg;
 		color:@title-color;
