--- a/css/codehighlight.less
+++ b/css/codehighlight.less
@@ -49,8 +49,8 @@
 		display:inline-block;
 		border:1px solid black;
 		margin-left:0.2em;
-		width:1em;
-		height:1em;
+		width:0.8em;
+		height:0.8em;
 		padding:0;
 		vertical-align: middle;
 	}
@@ -107,6 +107,7 @@
 		.no {
 			text-align:right;
 			border-right:3px solid @title-bg;
+			padding-bottom:1em;//codeにスクロールバーが出た時用に1行空ける
 			div {
 				padding:0 0.4em;
 			}
