正規表現まわりを修正

--- a/css/codehighlight.less
+++ b/css/codehighlight.less
@@ -25,11 +25,13 @@
 @builtin:@keyword;
 
 //正規表現
-@regexp:@premitive;
+@regexp:#393;
 
 //shadow
 @shadow-color:#666;
 @shadow:1px 1px 2px @shadow-color;
+
+@line-height:1.4em;
 
 .chl {
 	margin: 0.5em 0;
@@ -38,6 +40,7 @@
 	background: @bg-color;
 	color:@color;
 	overflow:none;
+	line-height: @line-height;
 
 	div, code, pre {
 		font-family:"Source Han Code JP" "Source Code Pro" "Meiryo" "MS GOTHIC" sans-serif;
@@ -107,7 +110,7 @@
 		.no {
 			text-align:right;
 			border-right:3px solid @title-bg;
-			padding-bottom:1em;//codeにスクロールバーが出た時用に1行空ける
+			padding-bottom: @line-height;//codeにスクロールバーが出た時用に1行空ける
 			div {
 				padding:0 0.4em;
 			}
@@ -115,7 +118,7 @@
 
 		.code {
 			flex-grow: 1;// 画面いっぱい使う
-			overflow:auto;
+			overflow-x:scroll;
 			div {
 				padding:0 1em;
 			}
