--- a/css/codehighlight.less
+++ b/css/codehighlight.less
@@ -31,7 +31,7 @@
 @shadow-color:#666;
 @shadow:1px 1px 2px @shadow-color;
 
-@line-height:1.4em;
+@line-height:1.7em;
 
 .chl {
 	margin: 0.5em 0;
@@ -40,12 +40,12 @@
 	background: @bg-color;
 	color:@color;
 	overflow:none;
-	line-height: @line-height;
 
 	div, code, pre {
-		font-family:"Source Han Code JP" "Source Code Pro" "Meiryo" "MS GOTHIC" sans-serif;
+		// font-family:"Source Han Code JP" "Source Code Pro" "Meiryo" "MS GOTHIC" sans-serif;
 		font-size:1em;
 		margin:0;
+		border:none;
 	}
 
 	span.color-block {
@@ -97,9 +97,12 @@
 
 	code {
 		display:flex;
-
+		align-items:flex-start;
+		padding:0;
+		background: @bg-color;
 		.no,.code {
 			div {
+				height: @line-height;
 				white-space: pre;
 				&:nth-child(2n){
 					background:@border-color;
@@ -110,7 +113,7 @@
 		.no {
 			text-align:right;
 			border-right:3px solid @title-bg;
-			padding-bottom: @line-height;//codeにスクロールバーが出た時用に1行空ける
+			padding-bottom: 1em;//codeにスクロールバーが出た時用に1行空ける
 			div {
 				padding:0 0.4em;
 			}
@@ -118,7 +121,7 @@
 
 		.code {
 			flex-grow: 1;// 画面いっぱい使う
-			overflow-x:scroll;
+			overflow-x:auto;
 			div {
 				padding:0 1em;
 			}
