--- a/css/codehighlight.less
+++ b/css/codehighlight.less
@@ -25,7 +25,7 @@
 @builtin:@keyword;
 
 //正規表現
-@regexp:#393;
+@regexp:#363;
 
 //shadow
 @shadow-color:#666;
@@ -66,7 +66,7 @@
 	}
 	.premitive {
 		color:@premitive;
-		// font-weight:bold;
+		font-weight:bold;
 	}
 
 	.keyword{
