--- a/css/codehighlight.less
+++ b/css/codehighlight.less
@@ -31,7 +31,7 @@
 @shadow-color:#666;
 @shadow:1px 1px 2px @shadow-color;
 
-@line-height:1.7em;
+@line-height:1.6em;
 
 .chl {
 	margin: 0.5em 0;
@@ -42,8 +42,9 @@
 	overflow:none;
 
 	div, code, pre {
-		font-family:"Source Han Code JP" "Source Code Pro" "Meiryo" "MS GOTHIC" sans-serif;
-		font-size:1em;
+		font-size: 13px;
+		line-height: 1.4;
+		font-family:Consolas, "Liberation Mono", Menlo, Courier, monospace;
 		margin:0;
 		border:none;
 	}
@@ -99,11 +100,17 @@
 		background: @bg-color;
 		.no,.code {
 			div {
+				&:first-child {
+					margin-top:0.3em;
+				}
+				vertical-align: top;
 				height: @line-height;
 				white-space: pre;
-				&:nth-child(2n){
-					background:@border-color;
-				}
+
+				// table-borderは要らないかな
+				// &:nth-child(2n){
+				// 	background:@border-color;
+				// }
 			}
 		}
 
@@ -112,7 +119,8 @@
 			border-right:3px solid @title-bg;
 			padding-bottom: 1em;//codeにスクロールバーが出た時用に1行空ける
 			div {
-				padding:0 0.4em;
+				padding-left:0.4em;
+				padding-right:0.4em;
 			}
 		}
 
@@ -120,7 +128,8 @@
 			flex-grow: 1;// 画面いっぱい使う
 			overflow-x:auto;
 			div {
-				padding:0 1em;
+				padding-left:1em;
+				padding-right:1em;
 			}
 		}
 	}
