CSS微調整、リファクタリング

--- a/css/codehighlight.less
+++ b/css/codehighlight.less
@@ -41,7 +41,7 @@
 	color:@color;
 	overflow:none;
 
-	div, code, pre {
+	div, code, pre, span {
 		font-size: 13px;
 		line-height: 1.4;
 		font-family:Consolas, "Liberation Mono", Menlo, Courier, monospace;
