今度こそ正規表現完璧

--- a/css/codehighlight.less
+++ b/css/codehighlight.less
@@ -42,8 +42,8 @@
 	overflow:none;
 
 	div, code, pre, span {
-		font-size: 13px;
-		line-height: 1.4;
+		font-size: 1rem;
+		line-height: 1.1;
 		font-family:Consolas, "Liberation Mono", Menlo, Courier, monospace;
 		margin:0;
 		border:none;
